		 The original error was lost.
		-[Core] Calling GetService(Type) and GetRegistration(Type) with type being typeof(IEnumerable<>) 
		 failed instead of returning null.
		-[Core] GetInstance(Type) threw a less expressive exception as GetInstance<TService>() when a type
		 could not be resolved. (work item 18542)
		-[Extensions] RegisterOpenGeneric allowed registering types that could never be resolved (for instance
		 because they had multiple constructors). An ArgumentException is now thrown during registration.
		-[Extensions] An implementation type registered using RegisterOpenGeneric that could not be resolved
		 (because for instance it has unregistered dependencies) caused a NullReferenceException.


Version 1.5.0.12199 (v1.5.0 RTM) 2012-07-17
	General description:
		An extension point is added to the core library, which allows developers to override the behavior of
		resolution and injection of constructors. For normal scenarios the use of the default behavior 
		(which only allows one single public constructor) is still advised. 
		
		Other great improvements are in the RegisterDecorator extension methods of the Extensions project. 
		The container now allows injecting a Func<ServiceType> into the decorator (besides injecting the 
		decorated service type), which enabled more advanced scenarios where creation of the decorated type 
		should be delayed (which is especially usefull when defining decorators for asynchronous execution and
		lifetime scoping). New RegisterSingleDecorator extension methods have been added, which can improve 
		performance and are especially useful when using Func<ServiceType> decorators. Support to decorating 
		collections has been improved. In most situations the predicate will be called for each element in the
		collection.

	Code changes:
		-[Core] Extension points added in the form of ContainerOptions.ConstructorXXXBehavior, which allows 