@@ -213,7 +213,37 @@
             // Assert
             Assert.IsNotNull(instance.Plugin);
         }
-       
+
+#if !SILVERLIGHT
+        [TestMethod]
+        public void InjectProperties_OnUserControlWithMoreThanTwoInjectableDependencies_Succeeds()
+        {
+            // Arrange
+            var container = new Container();
+
+            container.RegisterSingle<IPlugin>(new PluginImpl());
+
+            var instance = new MoreThanTwoPropertiesAndWinFormsBindingContext();
+
+            // Act
+            container.InjectProperties(instance);
+        }
+
+        public class MoreThanTwoPropertiesAndWinFormsBindingContext : ClassWithBindingContext
+        {
+            public IPlugin Plugin01 { get; set; }
+            
+            public IPlugin Plugin02 { get; set; }
+            
+            public IPlugin Plugin03 { get; set; }
+        }
+
+        public class ClassWithBindingContext
+        {
+            public System.Windows.Forms.BindingContext BindingContext { get; set; }
+        }
+#endif
+
         public class Service
         {
             // Should be skipped
